--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     <tr align="center" bgcolor="#DCD655"><td>组员：邱婉芯（17）</td><td>排版, 配色, 网页设计, 优化网页</td></tr>
     <tr align="center" bgcolor="white"><td>组员：王星萓（26）</td><td>文字资料, 找照片,片修整</td></tr>
     <tr align="center" bgcolor="#DCD655"><td>组员：彭暐淇（27）</td><td>Webhosting的账号处理</td></tr>
-    <tr align="center" bgcolor="#DCD655"><td>组员：陈伟煜（35）</td><td>Webhosting的账号处理</td></tr>
+    <tr align="center" bgcolor="white"><td>组员：陈伟煜（35）</td><td>Webhosting的账号处理</td></tr>
     </table>
     </div>
     
